--- a/client/src/pages/Home/styles/App.css
+++ b/client/src/pages/Home/styles/App.css
@@ -614,6 +614,7 @@ h2 {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  align-items: center;
 }
 
 .testimonial--container {
@@ -739,6 +740,7 @@ h2 {
   font-size: 36px;
   font-weight: 600;
   line-height: 77px;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
