--- a/client/src/pages/Home/styles/App.css
+++ b/client/src/pages/Home/styles/App.css
@@ -151,7 +151,7 @@ p {
 
 :root {
   --primary: #3674d9;
-  --heading-color: #282938;
+  --heading-color: #0e0d0d;
   --bg-shade: #f5fcff;
   --github: #e62872;
   --darkblue: #1c1e53;
@@ -225,7 +225,7 @@ h2 {
 
 .section--title {
   color: var(--heading-color);
-  font-size: 21px;
+  font-size: 28px;
   text-align: center;
   font-style: normal;
   font-weight: 600;
@@ -291,7 +291,7 @@ h2 {
 
 .hero--section-description {
   color: var(--darkblue);
-  font-size: 24px;
+  font-size: 26px;
   font-weight: 400;
   line-height: 36px;
 }
